--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@strapi/plugin-users-permissions": "4.10.7",
     "@strapi/provider-upload-cloudinary": "^4.10.7",
     "@strapi/strapi": "4.10.7",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "strapi-provider-email-resend": "^1.0.4"
   },
   "author": {
     "name": "Md Sajjad Bhuiyan Taki"
